CHANGES in RItools v. 0.1-11

NEW FEATURES
* the null SD of the difference in adjusted means is now reportable as "adj.means.diffs.sd"

* report="all" provides all relevant statistics

DEPRECATED & DEFUNCT
* The default imputation method for missing data is the median. Before 0.1-9 it was the mean. To use the mean, use impfn=mean.default.

BUG FIXES
* display, align, etc arguments to xtable.xbal() have been enabled.
* In xBalance, when specifying a stratification using a formula with several variables, as in "~x+y", the stratification you get is now interaction(x,y) rather than just y.  
