@@ -1,7 +1,8 @@
 ###These are tests of the basic function of xBalance under some
 ###restricted sitations and using functions that hew closely to the
 ###expressions in Hansen and Bowers 2008. For example, with only
-###binary treatment.
+###binary treatment. The idea here to show that the math in that
+###article is equivalent to the output from xBalance.
 
 require("RItools")
 
@@ -13,18 +14,18 @@ h.fn<-function(n,m){(m*(n-m))/n}
 var1<-function(x,m){ ##var(d)
   h<-h.fn(n=length(x),m=m)
   (1/h)*s2.fn(x)
-} 
+}
 
 var2<-function(x,m){ ##var(Z'x) (i.e. var of the sum statistic)
   h<-h.fn(n=length(x),m=m)
   (h)*s2.fn(x)
-} 
+}
 
 #####First just looking at the unstratified calculations
 xb1a<-xBalance(pr~ date+ t1 + t2 + cap + ne + ct + bw + cum.n,
-              strata=list(nostrat=NULL),
-              data=nuclearplants,
-              report=c("adj.means","adj.mean.diffs","adj.mean.diffs.null.sd","std.diffs","z.scores","p.values"))
+               strata=list(nostrat=NULL),
+               data=nuclearplants,
+               report=c("adj.means","adj.mean.diffs","adj.mean.diffs.null.sd","std.diffs","z.scores","p.values"))
 
 ##print(xb1a,digits=4)
 
@@ -54,33 +55,33 @@ test2.fn<-function(zz,mm,ss){
   ##tmat*tmat = squared mean deviations
   ##sapply(split(data.frame(mm),ss),function(x){sapply(x,function(var){(var-mean(var))^2})})
   ##so dv*tmat*tmat=(h/(n-1))*(x_i-\bar(x))^2=h*s^2
-  
+
   myssn<-apply(mm,2,function(x){sum((zz-unsplit(tapply(zz,ss,mean),ss))*x)})
-  
+
   hs<-tapply(zz,ss,function(z){h.fn(m=sum(z),n=length(z))})
   mywtsum<-sum(hs)
-  
+
   myadjdiff<-myssn/mywtsum
-  
+
   s2s<-sapply(data.frame(mm),function(x){sapply(split(x,ss),function(var){var(var)})})
-  
+
   myssvar<-apply(s2s,2,function(s2){sum(hs*s2)})
   mynullsd2<-apply(s2s,2,function(s2){sqrt((1/(sum(hs)^2))*sum(hs*s2))}) ##from StatSci eq 6
   mynullsd1<-sqrt(myssvar*(1/mywtsum)^2) ##with (1/h)
- 
+
   stopifnot(all.equal(mynullsd1,mynullsd2,check.attributes=FALSE))
 
- ##If numbers of treated and controls are the same for all blocks:
+  ##If numbers of treated and controls are the same for all blocks:
   if( length(unique(ss))>1 & all(diff(hs)==0) ){
     mynullsd3<-apply(s2s,2,function(s2){sqrt((1/(length(hs)))^2*sum((1/hs)*s2))}) ##(1/B^2)*\sum_{b=1}^B (1/h) s2
     stopifnot(all.equal(mynullsd3,mynullsd2))
-     
+
     ##For fun, the version ignoring the stratification.
     m<-sum(zz)
     n<-length(zz)
     h<-(m*(n-m))/n
     mynullsd.nostrat<-sqrt((1/h)*apply(mm,2,var))
-    
+
   }
   ##For pairs
   if((length(unique(ss))>1 & all(table(ss)==2)) & all(diff(hs)==0)){
@@ -91,14 +92,14 @@ test2.fn<-function(zz,mm,ss){
   myz2<-myadjdiff/mynullsd2
   myz3<-myadjdiff/mynullsd1
   myz1<-myssn/sqrt(myssvar)
-  
+
   stopifnot(all.equal(myz1,myz2,myz3,check.attributes=FALSE))
-  
-  return(cbind(adj.diff=myadjdiff,adj.diff.null.sd=mynullsd2,z=myz2)) 
+
+  return(cbind(adj.diff=myadjdiff,adj.diff.null.sd=mynullsd2,z=myz2))
 }
 
 mymm<-model.matrix(pr~ date+ t1 + t2 + cap + ne + ct + bw + cum.n-1,data=nuclearplants)
-  
+
 test2.fn(zz=nuclearplants$pr,mm=mymm,ss=nuclearplants$pt)
 
 all.equal(test2.fn(zz=nuclearplants$pr,mm=mymm,ss=nuclearplants$pt),
